First classifier as API

--- a/model2cloud.yml
+++ b/model2cloud.yml
@@ -24,3 +24,5 @@ dependencies:
   - xgboost
   - optuna                          # hyperparameter optimizations
   - pylama                          # python linting
+  - fastapi                         # for the webapp
+  - uvicorn
