--- a/model2cloud.yml
+++ b/model2cloud.yml
@@ -22,6 +22,7 @@ dependencies:
   - torchvision
   - fastai
   - xgboost
+  - dvc                             # data version control
   - optuna                          # hyperparameter optimizations
   - pylama                          # python linting
   - fastapi                         # for the webapp
