Add section about usage of DVC
A new section in the README.md explain how DVC is used in this project.
Then DVC is used to create pipeline steps which unpack the raw input data,
and transform the data into a parquet file.

--- a/model2cloud.yml
+++ b/model2cloud.yml
@@ -12,6 +12,7 @@ dependencies:
   - jupytext                        # convert ipynb to python
   - tqdm                            # progress bar
   - pandas
+  - pyarrow
   - scikit-learn
   - category_encoders               # multiple encoding techniques in one cool library
   - scipy
